--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,37 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="E:/AUTOTEST_27/01 - Software/04 - Windows Software/client-combined-3.141.59-sources.jar"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/bcpkix-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/bcprov-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/checker-qual-3.8.0.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/commons-codec-1.13.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/dec-0.1.2.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/docker-java-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/docker-java-api-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/docker-java-core-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/docker-java-transport-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/docker-java-transport-httpclient5-3.2.11.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/error_prone_annotations-2.5.1.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/failureaccess-1.0.1.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/gson-2.8.8.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/guava-30.1.1-jre.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/httpclient5-5.0.3.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/httpcore5-5.0.2.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/j2objc-annotations-1.3.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jackson-annotations-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jackson-core-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jackson-databind-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jcl-over-slf4j-1.7.30.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jna-5.8.0.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jsoup-1.14.2.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/jsr305-3.0.2.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/listenablefuture-9999.0-empty-to-avoid-conflict-with-guava.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/slf4j-api-1.7.32.jar"/>
+	<classpathentry kind="lib" path="libWebDrivermanager/webdrivermanager-5.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
